--- a/src/gui/EnterBookFrame.form
+++ b/src/gui/EnterBookFrame.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Registrar libro"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[400, 549]"/>
+      <Dimension value="[400, 580]"/>
     </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -31,7 +31,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="frameTitleLabel" alignment="0" pref="380" max="32767" attributes="0"/>
+                  <Component id="frameTitleLabel" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
@@ -43,7 +43,7 @@
                           <Component id="authorLabel" alignment="0" max="32767" attributes="0"/>
                           <Component id="titleLabel" alignment="0" max="32767" attributes="0"/>
                           <Component id="genreLabel" alignment="0" max="32767" attributes="0"/>
-                          <Component id="languageLabel" alignment="0" pref="140" max="32767" attributes="0"/>
+                          <Component id="languageLabel" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -56,7 +56,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="formatLabel" alignment="0" max="32767" attributes="0"/>
-                          <Component id="publishedLabel" alignment="0" pref="140" max="32767" attributes="0"/>
+                          <Component id="publishedLabel" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -67,7 +67,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="idLabel" max="32767" attributes="0"/>
-                          <Component id="descriptionLabel" pref="140" max="32767" attributes="0"/>
+                          <Component id="descriptionLabel" max="32767" attributes="0"/>
                           <Component id="quantityLabel" max="32767" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
