--- a/src/gui/LoanFrame.form
+++ b/src/gui/LoanFrame.form
@@ -47,7 +47,7 @@
           <Font name="Tahoma" size="24" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Registro de libros"/>
+        <Property name="text" type="java.lang.String" value="Nuevo pr&#xe9;stamo"/>
       </Properties>
     </Component>
   </SubComponents>
