--- a/src/gui/MediaPlayerLoanFrame.form
+++ b/src/gui/MediaPlayerLoanFrame.form
@@ -40,7 +40,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="idStudentLabel" max="32767" attributes="0"/>
-                                      <Component id="mediaTitleLabel" min="-2" pref="138" max="-2" attributes="0"/>
+                                      <Component id="mediaPlayerTitleLabel" min="-2" pref="138" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -51,12 +51,12 @@
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                           <Component id="verificationLabel" min="-2" pref="34" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="mediaSearchTextField" min="-2" pref="261" max="-2" attributes="0"/>
+                                      <Component id="mediaPlayerSearchTextField" min="-2" pref="261" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="verifyStudentButton" max="32767" attributes="0"/>
-                                      <Component id="searchMediaButton" min="-2" pref="71" max="-2" attributes="0"/>
+                                      <Component id="searchMediaPlayerButton" min="-2" pref="71" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -93,14 +93,14 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="mediaTitleLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="mediaSearchTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="mediaPlayerTitleLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="mediaPlayerSearchTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="verifyStudentButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="searchMediaButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="searchMediaPlayerButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -151,12 +151,12 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JLabel" name="mediaTitleLabel">
+    <Component class="javax.swing.JLabel" name="mediaPlayerTitleLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="B&#xfa;squeda"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="mediaSearchTextField">
+    <Component class="javax.swing.JTextField" name="mediaPlayerSearchTextField">
     </Component>
     <Component class="javax.swing.JButton" name="submitButton">
       <Properties>
@@ -182,12 +182,12 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verifyStudentButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="searchMediaButton">
+    <Component class="javax.swing.JButton" name="searchMediaPlayerButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchMediaButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchMediaPlayerButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="verificationLabel">
@@ -211,7 +211,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="mediasTable">
+        <Component class="javax.swing.JTable" name="mediaPlayersTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
